--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 display: flex;
 justify-content: center;
 align-items: center;
-height: 100vh;
+height: 50px;
+width: 50px;
 background-color: lavender;
 margin: 0;
 }
@@ -25,14 +26,18 @@ margin: 0;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .button{
+    height: 70px;
+    width: 70px;
     color: red;
     background-color: aliceblue;
     color: black;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     border-radius: 50%;
     padding: 10px;
+    border: none;
     cursor: pointer;
     display: flex;
     justify-content: center;
